--- a/package.json
+++ b/package.json
@@ -59,5 +59,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "ecommerce99.azurewebsites.net"
+  "proxy": "https://ecommerce99.azurewebsites.net/"
 }
